# apps/api-gateway/openapi/guest-v1.json
@@ -121,6 +121,14 @@
         ]
       }
     },
+    "/profiles": {
+      "patch": {
+        "operationId": "updateGuestProfile",
+        "tags": [
+          "profiles"
+        ]
+      }
+    },
     "/profiles/personal": {
       "patch": {
         "operationId": "updateGuestPersonalProfile",
